# velma_hardware

./: CMakeLists.txt  deploy_vt.lua  package.xml
src/: CANDev.cpp  HeadTrajectoryGenerator.cpp  MotorController.cpp  MotorController.h  torso.cpp
